--- a/env/backup.env
+++ b/env/backup.env
@@ -130,7 +130,7 @@ AUTO_DETECT_DATASTORES="true"
 LOCAL_BACKUP_PATH="${BASE_DIR}/backup/"
 
 # Secondary backup path (external) # Write your secondary path
-SECONDARY_BACKUP_PATH=""
+SECONDARY_BACKUP_PATH="your/secondary/backup/path"
 
 # Cloud backup path
 CLOUD_BACKUP_PATH="/proxmox-backup/backup"
@@ -140,7 +140,7 @@ CLOUD_BACKUP_PATH="/proxmox-backup/backup"
 LOCAL_LOG_PATH="${BASE_DIR}/log/"
 
 # Secondary log path # Write your secondary path
-SECONDARY_LOG_PATH=""
+SECONDARY_LOG_PATH="your/secondary/log/path"
 
 # Cloud log path
 CLOUD_LOG_PATH="/proxmox-backup/log"
