--- a/env/backup.env
+++ b/env/backup.env
@@ -158,7 +158,7 @@ MAX_CLOUD_LOGS=20
 
 # ---------- Custom Paths ----------
 # Custom PBS and PVE paths
-PBS_DATASTORE_PATH="/mnt/datastore/backup_ext"
+PBS_DATASTORE_PATH=""
 PVE_CONFIG_PATH="/etc/pve"
 PVE_CLUSTER_PATH="/var/lib/pve-cluster"
 COROSYNC_CONFIG_PATH="/etc/corosync"
