--- a/env/backup.env
+++ b/env/backup.env
@@ -133,7 +133,7 @@ AUTO_DETECT_DATASTORES="true"
 
 # ---------- Backup Paths ----------
 # Local backup path (primary)
-LOCAL_BACKUP_PATH="${BASE_DIR}/backup/"
+LOCAL_BACKUP_PATH="${BASE_DIR}/backup"
 
 # Secondary backup path (external) # Write your secondary path
 SECONDARY_BACKUP_PATH=""
