--- a/env/backup.env
+++ b/env/backup.env
@@ -1,7 +1,10 @@
 #!/bin/bash
-# Version: 0.2.2
 # ============================================================================
 # PROXMOX BACKUP SYSTEM - MAIN CONFIGURATION
+# File: backup.env
+# Version: 1.0.2
+# Last Modified: 2025-10-25
+# Changes: Added some blacklist 
 # ============================================================================
 # Main configuration file for Proxmox backup system
 # This file contains all configurations needed for automated backup
@@ -11,9 +14,8 @@
 # - This file must have 600 permissions and be owned by root
 # - Always verify configuration before running backups in production
 # - Keep backup copies of this configuration file
-#
-SCRIPT_VERSION="0.2.2"
-# Last modified: $(date +"%Y-%m-%d")
+# - La versione del SISTEMA viene caricata dal file VERSION
+# - La versione QUI indica la versione del formato di configurazione
 # ============================================================================
 
 # ============================================================================
@@ -302,14 +304,24 @@ CUSTOM_BACKUP_PATHS="
 # ---------- Backup Blacklist ----------
 # Paths to exclude from backup
 # One path per line, supports patterns and variables
+# Supported formats:
+#   - Exact path: /root/.cache (excludes /root/.cache and all subdirectories)
+#   - Glob pattern: /root/.* (excludes all hidden files/folders in /root)
+#   - Wildcard: *_cacache* (excludes any path containing "_cacache")
+#   - Variables: ${BASE_DIR}/log/ (variables are expanded)
 BACKUP_BLACKLIST="
 /etc/proxmox-backup/.debug
 /etc/proxmox-backup/.tmp
 /etc/proxmox-backup/.lock
 /etc/proxmox-backup/tasks
-/root/.*
 /root/.bash_history
 /root/.cache
+/root/.npm
+/root/.dotnet
+/root/.local
+/root/.gnupg
+/root/.claude
+/root/.codex
 ${BASE_DIR}/log/
 ${BASE_DIR}/backup/
 "
