--- a/env/backup.env
+++ b/env/backup.env
@@ -2,15 +2,15 @@
 # ============================================================================
 # PROXMOX BACKUP SYSTEM - MAIN CONFIGURATION
 # File: backup.env
-# Version: 1.0.2
+# Version: 1.1.3
 # Last Modified: 2025-10-25
-# Changes: Added some blacklist 
+# Changes: Automatic migration from wildcard to specific blacklist exclusions
 # ============================================================================
 # Main configuration file for Proxmox backup system
 # This file contains all configurations needed for automated backup
 # of PVE (Proxmox Virtual Environment) and PBS (Proxmox Backup Server)
 #
-# IMPORTANT: 
+# IMPORTANT:
 # - This file must have 600 permissions and be owned by root
 # - Always verify configuration before running backups in production
 # - Keep backup copies of this configuration file
@@ -254,21 +254,22 @@ BOT_TELEGRAM_TYPE="centralized"
 TELEGRAM_SERVER_API_HOST="https://bot.tis24.it:1443" # Port 1443 must be opened on 433 of telegram server
 
 # ---------- Email Configuration ----------
-# Email recipient
-EMAIL_RECIPIENT="" # If you don't specify an address, root's email will be used
+# Email delivery method: "relay" (Cloud relay) or "sendmail" (local SMTP)
+# Note: "ses" is deprecated but still supported for backward compatibility (treated as "relay")
+EMAIL_DELIVERY_METHOD="relay"
 
-# Email sender
-EMAIL_FROM="homelab@tis24.it" # If you prefer, change with your preferred email address
+# Fallback to sendmail if cloud relay fails (rate limit, network error, etc.)
+EMAIL_FALLBACK_SENDMAIL="true"
+
+# Email recipient (if empty, uses root email from Proxmox)
+EMAIL_RECIPIENT="homelab@tis24.it"
+
+# Email sender (configured in Worker, cannot be overridden)
+# This value is informational only - Worker uses no-reply@proxmox.tis24.it
+EMAIL_FROM="no-reply@proxmox.tis24.it"
 
 # Email subject prefix
 EMAIL_SUBJECT_PREFIX="[Proxmox-Backup]"
-
-# SMTP server configuration
-SMTP_SERVER="localhost"
-SMTP_PORT="25"
-SMTP_USE_TLS="false"
-SMTP_USERNAME=""
-SMTP_PASSWORD=""
 
 # ============================================================================
 # 7. PROMETHEUS CONFIGURATION
@@ -320,8 +321,6 @@ BACKUP_BLACKLIST="
 /root/.dotnet
 /root/.local
 /root/.gnupg
-/root/.claude
-/root/.codex
 ${BASE_DIR}/log/
 ${BASE_DIR}/backup/
 "
@@ -366,4 +365,4 @@ RESET='\033[0m'
 # - rclone documentation for cloud configurations
 # ============================================================================
 
-
+#END
