--- a/env/backup.env
+++ b/env/backup.env
@@ -262,7 +262,7 @@ EMAIL_DELIVERY_METHOD="relay"
 EMAIL_FALLBACK_SENDMAIL="true"
 
 # Email recipient (if empty, uses root email from Proxmox)
-EMAIL_RECIPIENT="homelab@tis24.it"
+EMAIL_RECIPIENT=""
 
 # Email sender (configured in Worker, cannot be overridden)
 # This value is informational only - Worker uses no-reply@proxmox.tis24.it
