--- a/env/backup.env
+++ b/env/backup.env
@@ -2,9 +2,9 @@
 # ============================================================================
 # PROXMOX BACKUP SYSTEM - MAIN CONFIGURATION
 # File: backup.env
-# Version: 1.1.3
-# Last Modified: 2025-10-25
-# Changes: Automatic migration from wildcard to specific blacklist exclusions
+# Version: 1.1.4
+# Last Modified: 2025-11-03
+# Changes: Add rsync
 # ============================================================================
 # Main configuration file for Proxmox backup system
 # This file contains all configurations needed for automated backup
@@ -29,7 +29,7 @@ MIN_BASH_VERSION="4.4.0"
 DEBUG_LEVEL="standard"
 
 # Required packages for system operation
-REQUIRED_PACKAGES="tar gzip zstd pigz jq curl rclone gpg"
+REQUIRED_PACKAGES="tar gzip zstd pigz jq curl rclone gpg rsync"
 OPTIONAL_PACKAGES=""
 
 # Automatic installation of missing dependencies
