--- a/env/backup.env
+++ b/env/backup.env
@@ -2,9 +2,9 @@
 # ============================================================================
 # PROXMOX BACKUP SYSTEM - MAIN CONFIGURATION
 # File: backup.env
-# Version: 1.1.3
-# Last Modified: 2025-10-25
-# Changes: Automatic migration from wildcard to specific blacklist exclusions
+# Version: 1.3.0
+# Last Modified: 2025-11-04
+# Changes: removed required package from here
 # ============================================================================
 # Main configuration file for Proxmox backup system
 # This file contains all configurations needed for automated backup
@@ -14,8 +14,6 @@
 # - This file must have 600 permissions and be owned by root
 # - Always verify configuration before running backups in production
 # - Keep backup copies of this configuration file
-# - La versione del SISTEMA viene caricata dal file VERSION
-# - La versione QUI indica la versione del formato di configurazione
 # ============================================================================
 
 # ============================================================================
@@ -27,13 +25,6 @@ MIN_BASH_VERSION="4.4.0"
 
 # Debug level: "standard", "advanced" (-v), "extreme" (-x)
 DEBUG_LEVEL="standard"
-
-# Required packages for system operation
-REQUIRED_PACKAGES="tar gzip zstd pigz jq curl rclone gpg"
-OPTIONAL_PACKAGES=""
-
-# Automatic installation of missing dependencies
-AUTO_INSTALL_DEPENDENCIES="true"
 
 # Disable colors in output (useful for logs or terminals that don't support colors)
 DISABLE_COLORS="false"
