--- a/internal/config/templates/backup.env
+++ b/internal/config/templates/backup.env
@@ -8,6 +8,7 @@
 # ----------------------------------------------------------------------
 BACKUP_ENABLED=true
 ENABLE_GO_BACKUP=true
+PROFILING_ENABLED=true         # Enable CPU/heap profiling (pprof) for Go pipeline
 USE_COLOR=true
 COLORIZE_STEP_LOGS=true      # Highlight "Step N/8" lines (requires USE_COLOR=true)
 DEBUG_LEVEL=standard        # standard | advanced | extreme
