--- a/internal/config/templates/backup.env
+++ b/internal/config/templates/backup.env
@@ -270,6 +270,7 @@ BACKUP_INSTALLED_PACKAGES=true
 BACKUP_SCRIPT_DIR=true
 BACKUP_CRITICAL_FILES=true
 BACKUP_SSH_KEYS=true
+# ZFS configuration (/etc/zfs, /etc/hostid, zpool cache/properties)
 BACKUP_ZFS_CONFIG=true
 BACKUP_ROOT_HOME=true
 BACKUP_SCRIPT_REPOSITORY=false
