--- a/internal/config/templates/backup.env
+++ b/internal/config/templates/backup.env
@@ -26,9 +26,19 @@ CHECK_FIREWALL=false
 CHECK_OPEN_PORTS=false
 SUSPICIOUS_PORTS="6666 6665 1337 31337 4444 5555 4242 6324 8888 2222 3389 5900"
 PORT_WHITELIST=                     # Format: service:port (e.g. sshd:22,nginx:443)
+
+# Process security lists - NOTE: Your values are ADDED to built-in defaults (not replaced)
+# SUSPICIOUS_PROCESSES: Add malware/suspicious process names to detect
+# Built-in defaults: ncat, cryptominer, xmrig, kdevtmpfsi, kinsing, minerd, mr.sh
 SUSPICIOUS_PROCESSES="ncat,cryptominer,xmrig,kdevtmpfsi,kinsing,minerd,mr.sh"
-SAFE_BRACKET_PROCESSES="sshd:,systemd,cron,rsyslogd,dbus-daemon"
-SAFE_KERNEL_PROCESSES="ksgxd,hwrng,usb-storage,vdev_autotrim,card1-crtc0,card1-crtc1,card1-crtc2,kvm-pit,psimon"
+
+# SAFE_KERNEL_PROCESSES: Add safe kernel process patterns (supports exact, wildcard*, regex:pattern)
+# Built-in defaults include: ksgxd, hwrng, usb-storage, vdev_autotrim, kvm-pit*, and ZFS/DRBD patterns
+SAFE_KERNEL_PROCESSES="regex:^card[0-9]+-crtc[0-9]+$,regex:^drbd_[wrs]_.+,regex:^kmmpd-drbd[0-9]+$"
+
+# SAFE_BRACKET_PROCESSES: Add safe bracket [process] names
+# Built-in defaults include: systemd, cron, sshd:, rsyslogd, dbus-daemon, ZFS processes, NFS processes
+# SAFE_BRACKET_PROCESSES=""
 
 # ----------------------------------------------------------------------
 # Disk space
@@ -84,12 +94,49 @@ LOG_PATH=${BASE_DIR}/log       # Primary log storage path
 # ----------------------------------------------------------------------
 # Secondary storage
 # ----------------------------------------------------------------------
+# IMPORTANT: SECONDARY_PATH must be a filesystem-mounted path (e.g., /mnt/nas-backup)
+# It CANNOT be a network address like "192.168.0.10/folder" or "//server/share"
+#
+# For local network storage (NAS):
+# 1. First mount the network share using NFS/CIFS/SMB
+# 2. Then set SECONDARY_PATH to the local mount point
+#
+# Example (NFS):
+#   sudo mount 192.168.0.10:/backup /mnt/nas-backup
+#   SECONDARY_PATH=/mnt/nas-backup
+#
+# Example (CIFS/SMB):
+#   sudo mount -t cifs //192.168.0.10/backup /mnt/nas-backup -o credentials=/root/.smbcreds
+#   SECONDARY_PATH=/mnt/nas-backup
+#
+# For direct network access without mounting, use CLOUD_REMOTE with rclone instead.
+# ----------------------------------------------------------------------
 SECONDARY_ENABLED=false # true-false = enable disable copy backup on secondary path
 SECONDARY_PATH=/opt/testbackup # Secondary backup storage path
 SECONDARY_LOG_PATH=/opt/testlog # Secondary log storage path
 
 # ----------------------------------------------------------------------
 # Cloud storage (rclone)
+# ----------------------------------------------------------------------
+# Use CLOUD_REMOTE for:
+# - Cloud providers (Google Drive, S3, Backblaze B2, Dropbox, etc.)
+# - Self-hosted S3-compatible storage (MinIO, Ceph S3)
+# - Direct network access to LAN servers (via rclone remote configuration)
+#
+# CLOUD_REMOTE format: remote-name:path
+# The remote-name must be configured in rclone first (run: rclone config)
+#
+# Example for cloud storage:
+#   CLOUD_REMOTE=gdrive:pbs-backups
+#   CLOUD_REMOTE=s3:my-bucket/backups
+#
+# Example for LAN MinIO/S3 server at 192.168.0.10:
+#   1. Configure rclone: rclone config (create "minio" remote pointing to http://192.168.0.10:9000)
+#   2. Set: CLOUD_REMOTE=minio:pbs-backups
+#
+# This is the CORRECT way to use direct network addresses without filesystem mounting.
+# If you want to use a network path like "192.168.0.10/folder", configure it here via rclone,
+# NOT in SECONDARY_PATH (which requires filesystem-mounted paths only).
 # ----------------------------------------------------------------------
 CLOUD_ENABLED=false # true-false = enable disable copy backup on secondary path
 CLOUD_REMOTE=GoogleDrive # Cloud backup storage path
@@ -100,7 +147,7 @@ CLOUD_LOG_PATH=
 CLOUD_UPLOAD_MODE=parallel          # sequential | parallel (parallel uses a worker pool for associated/bundle files)
 CLOUD_PARALLEL_MAX_JOBS=2             # Parallel workers when CLOUD_UPLOAD_MODE=parallel
 CLOUD_PARALLEL_VERIFICATION=true     # true = also verify each associated file in parallel
-CLOUD_WRITE_HEALTHCHECK=false        # true = preflight write test (creates/removes a temp file on the remote)
+CLOUD_WRITE_HEALTHCHECK=false        # false = auto (list + fallback to write test), true = force write test only
 
 # ----------------------------------------------------------------------
 # Rclone settings
