--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
       - name: Checkout repository
-      uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.23
+          go-version: '1.23'
 
       - name: Run tests with coverage
         run: go test ./... -coverprofile=coverage.out
