--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Run tests with coverage
         run: go test ./... -coverprofile=coverage.out
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: coverage.out
-          flags: unittests
           fail_ci_if_error: true
